:sparkles: add initial database schema and seed data for gift templates

--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,13 @@
 	"name": "server",
 	"version": "1.0.0",
 	"main": "index.js",
+	"prisma": {
+		"schema": "./prisma/schema.prisma"
+	},
 	"scripts": {
-		"dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+		"generate": "prisma generate",
+		"dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+		"seed": "ts-node ./prisma/seed.ts"
 	},
 	"keywords": [],
 	"author": "",
